[project]
name = "pylw3"
version = "0.1.0"
description = "Lightware LW3 protocol library"
readme = "README.md"
authors = [
    {name = "Sam Stenvall", email = "sam.stenvall@nitor.com"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "pytelnetdevice @ git+https://github.com/NitorCreations/pytelnetdevice@ab5b48c"
]
